# second-me-prototype

./: .env.example  .gitignore  CURSOR_CONTEXT.md  DEVELOPMENT_LOG.md  README.md  TODOS.md  pyproject.toml  requirements.txt
app/core/: __init__.py  config.py  config_example.py  dependencies.py
app/models/l1/: README.md  __init__.py  bio.py  db_models.py  examples.py  generation_result.py  migrations.py  note.py  schema_application.py  (+3 more)
app/processors/: __init__.py
app/providers/: README.md  __init__.py  blob_store.py  rel_db.py  vector_db.py
app/services/: llm_service.py
data/: 00010-032991.md  11 Brandon Notes.md  11 Schedules 2023.md  134 Allen.md  2. Wonder Woman 1984.md  2012-02-16.md  2012-12-05.md  2012-12-06.md  2012-12-13.md  2012-12-28.md  2012-12-29.md  2012-12-30.md  2012-12-31.md  222-03-08.md  25 items.md  3 Kingdoms Podcast.md  3. Seamus Heaney - Scaffolding.md  30-day confidence challenge.md  4. My Year in Books 2020.md  5 Things A Day.md  5. Reads on the Coup.md  99 bottles.md
design_docs/: L0_insight_summary.md  chat_storage.md  v0_L0_flow.md  v0_L0_instructions.md  v0_L1_current.md  v0_L1_flow.md  v0_L1_instructions.md  v0_architecture.md  v0_overview.md
scripts/: apply_l1_shade_migration.py  fix_tenant_cluster_schema.py  migrate_to_weaviate_multitenancy.py  process_all_data.py  run_l1_manager_methods.py  run_l1_table_migration.py  test_document_embedding.py  test_l0_pipeline.py  update_weaviate_schema.py
scripts/migrations/: add_version_to_l1_tables.sql  create_l1_version_indexes.sql
tests/: conftest.py  test_adapters.py  test_rel_db.py
(+41 files in other folders)
