[project]
name = "second-me-prototype"
version = "0.1.0"
description = "Digital Twin Chatbot Prototype"
authors = [
    {name = "Second Me Team"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
